[gd_scene load_steps=3 format=3 uid="uid://cacp5m385xvk7"]

[ext_resource type="Script" path="res://Scripts/obstacle.gd" id="1_lr4un"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82p0b"]
size = Vector2(46, 42)

[node name="Obstacle" type="Area2D"]
collision_mask = 2
script = ExtResource("1_lr4un")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_82p0b")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
